# draw-wxWidgets

./: CMakeLists.txt  LICENSE  README.md
src/: canvas.cpp  canvas.h  frame.cpp  frame.h
